Added the LinearRegression, DecisionTreeRegressor, RandomForestRegressor and GradientBoostingRegressor models.

--- a/optimizedrainpred.ipynb
+++ b/optimizedrainpred.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9GSzumVfkvGr0l8vGZBA/",
+      "authorship_tag": "ABX9TyPWrUf3UBwoPhDwTga9PhxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1996,14 +1996,14 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, classification_report, r2_score\n",
         "\n",
         "x_train,x_test,y_train,y_test=train_test_split(x,y,random_state=30,test_size=0.3)"
       ],
       "metadata": {
         "id": "KiCl_08FGYaE"
       },
-      "execution_count": 31,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -2047,9 +2047,207 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#testing\n",
+        "mae=mean_absolute_error(y_test,y_pred)\n",
+        "mse=mean_squared_error(y_test,y_pred)\n",
+        "r2=r2_score(y_test,y_pred)\n",
+        "print(f\"MSE : {mse}\")\n",
+        "print(f\"MAE : {mae}\")\n",
+        "print(f\"r2_socre: {r2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vMxQTJJXJVjs",
+        "outputId": "e1f3b187-6514-479a-a086-d104a33ad038"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE : 59.685727105595554\n",
+            "MAE : 5.459333219574004\n",
+            "r2_socre: 0.4809517300246219\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#DecisionTreeRegressor"
+      ],
+      "metadata": {
+        "id": "5cTAN6ntNPt4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "\n",
+        "model=DecisionTreeRegressor()\n",
+        "model.fit(x_train_scaled,y_train)\n",
+        "y_pred=model.predict(x_test_scaled)"
+      ],
+      "metadata": {
+        "id": "UHhND8swMQKA"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#testing\n",
+        "mae=mean_absolute_error(y_test,y_pred)\n",
+        "mse=mean_squared_error(y_test,y_pred)\n",
+        "r2=r2_score(y_test,y_pred)\n",
+        "print(f\"MSE : {mse}\")\n",
+        "print(f\"MAE : {mae}\")\n",
+        "print(f\"r2_socre: {r2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oOVpV1bGOzCz",
+        "outputId": "6a59409a-8aa6-46e6-8a60-e21d0aff363d"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE : 54.325617529880475\n",
+            "MAE : 4.242629482071713\n",
+            "r2_socre: 0.5275651456110853\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#RandomForestRegressor"
+      ],
+      "metadata": {
+        "id": "QoYM7N5aQZPu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
+        "model=RandomForestRegressor(n_estimators=100, random_state=42, max_depth=10, min_samples_split=3) #n_estimators is the number of trees\n",
+        "model.fit(x_train_scaled,y_train)\n",
+        "y_pred=model.predict(x_test_scaled)\n",
+        "\n",
+        "#max_depth is how many splits the trees are allowed to do\n",
+        "#min_samples_split is minimum number of samples required to split a node"
+      ],
+      "metadata": {
+        "id": "r1UNO5mIO1z1"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#testing\n",
+        "mae=mean_absolute_error(y_test,y_pred)\n",
+        "mse=mean_squared_error(y_test,y_pred)\n",
+        "r2=r2_score(y_test,y_pred)\n",
+        "print(f\"MSE : {mse}\")\n",
+        "print(f\"MAE : {mae}\")\n",
+        "print(f\"r2_socre: {r2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zd5ZBRQ_QwHH",
+        "outputId": "115c65dd-8a02-41bd-ea41-df623655a834"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE : 37.891327368347966\n",
+            "MAE : 4.024319721624816\n",
+            "r2_socre: 0.6704835666521036\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#GradientBoostingRegressor"
+      ],
+      "metadata": {
+        "id": "ikSAy_LEVWxx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import GradientBoostingRegressor\n",
+        "model=GradientBoostingRegressor(random_state=42)\n",
+        "model.fit(x_train_scaled,y_train)\n",
+        "y_pred=model.predict(x_test_scaled)"
+      ],
+      "metadata": {
+        "id": "x-yelyIiR48m"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#testing\n",
+        "mae=mean_absolute_error(y_test,y_pred)\n",
+        "mse=mean_squared_error(y_test,y_pred)\n",
+        "r2=r2_score(y_test,y_pred)\n",
+        "print(f\"MSE : {mse}\")\n",
+        "print(f\"MAE : {mae}\")\n",
+        "print(f\"r2_socre: {r2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CJYCWe1BVoSD",
+        "outputId": "58614220-e476-4f64-cf6f-dba41895be04"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE : 36.398965774434366\n",
+            "MAE : 3.961051302977268\n",
+            "r2_socre: 0.683461672826937\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "vMxQTJJXJVjs"
+        "id": "dRXdl2paV6om"
       },
       "execution_count": null,
       "outputs": []
