--- a/optimizedrainpred.ipynb
+++ b/optimizedrainpred.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6jQJieupsyIBM1QHYGB/W",
+      "authorship_tag": "ABX9TyMcAcaHAiukDqTd4/j3qbtv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "D1_tJdbH8l9e",
         "outputId": "2b3557d8-4746-45f5-9aba-c8146c956b6d"
@@ -495,7 +495,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 88
         },
         "id": "xtzjzxaGJeoZ",
         "outputId": "5a448af3-b8d8-418d-e270-74549a627e35"
@@ -525,7 +525,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 320
         },
         "id": "28Cq64lAMG4F",
         "outputId": "74c7a6cc-2f1a-40a2-be33-342e8f6b19a0"
@@ -2264,7 +2264,7 @@
       "metadata": {
         "id": "wFUZYbUPnU2K"
       },
-      "execution_count": 136,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -2282,9 +2282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "95AQpIQ1nzVj",
-        "outputId": "4236b22c-df51-4c8f-cb61-c0ef130dece5"
+        "outputId": "dca928a7-8081-4feb-9ff5-fdb1a092dae3"
       },
-      "execution_count": 137,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -2298,10 +2298,239 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#LightGBM"
+      ],
+      "metadata": {
+        "id": "kcKDvIcHre3G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import lightgbm as lgb\n",
+        "model=lgb.LGBMRegressor(learning_rate=0.05,n_estimators=150,max_depth=4,subsample=0.8,reg_alpha=0.1,reg_lambda=0.1)\n",
+        "model.fit(x_train_scaled,y_train)\n",
+        "y_pred=model.predict(x_test_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NmHrUII-rgxd",
+        "outputId": "4df5a0d4-4987-4f4d-8c54-dbcca54c1aa2"
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000087 seconds.\n",
+            "You can set `force_col_wise=true` to remove the overhead.\n",
+            "[LightGBM] [Info] Total Bins 469\n",
+            "[LightGBM] [Info] Number of data points in the train set: 583, number of used features: 6\n",
+            "[LightGBM] [Info] Start training from score 6.529846\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+            "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mse=mean_squared_error(y_test,y_pred)\n",
+        "mae=mean_absolute_error(y_test,y_pred)\n",
+        "r2=r2_score(y_test,y_pred)\n",
+        "print(f\"MSE : {mse}\")\n",
+        "print(f\"MAE : {mae}\")\n",
+        "print(f\"r2_socre: {r2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6qtjobCOrlLL",
+        "outputId": "a9483139-e333-4587-997b-eb615c9a249d"
+      },
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE : 39.83789410667746\n",
+            "MAE : 3.917915179733871\n",
+            "r2_socre: 0.6535555313090138\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Qx_pk-h3oFfT"
+        "id": "WqKhMT1Ose1I"
       },
       "execution_count": null,
       "outputs": []
