--- a/optimizedrainpred.ipynb
+++ b/optimizedrainpred.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcAcaHAiukDqTd4/j3qbtv",
+      "authorship_tag": "ABX9TyN2X2XchOs634eVYL00bTxX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2527,10 +2527,91 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We can come to the conclusion that XGBoost gives us the best outcome when it comes to predicting precipitation."
+      ],
+      "metadata": {
+        "id": "w4PN8DXV0QM0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Rain Classification"
+      ],
+      "metadata": {
+        "id": "aiBIMyrO0fld"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['prcp_prev']=data['prcp'].shift(1) #previous day's precipitation\n",
+        "data['pres_prev']=data['pres'].shift(1) #previous day's pressure\n",
+        "data['RainTomorrow']=data['RainToday'].shift(-1)\n",
+        "data.dropna(inplace=True)\n",
+        "data['RainTomorrow']=data['RainTomorrow'].astype(int)\n",
+        "data.info()\n",
+        "x=data[['tavg','tmin','tmax','wdir','wspd','pres','prcp','prcp_prev','pres_prev']]\n",
+        "y=data['RainTomorrow'].astype(int)\n",
+        "\n",
+        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.3)\n",
+        "scaler=StandardScaler()\n",
+        "scaler.fit(x_train)\n",
+        "x_train_scaled=scaler.transform(x_train)\n",
+        "x_test_scaled=scaler.transform(x_test)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WqKhMT1Ose1I",
+        "outputId": "c4d84620-6273-4c6d-9820-193dc81be9af"
+      },
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 826 entries, 4 to 854\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column        Non-Null Count  Dtype         \n",
+            "---  ------        --------------  -----         \n",
+            " 0   date          826 non-null    datetime64[ns]\n",
+            " 1   tavg          826 non-null    float64       \n",
+            " 2   tmin          826 non-null    float64       \n",
+            " 3   tmax          826 non-null    float64       \n",
+            " 4   wdir          826 non-null    float64       \n",
+            " 5   wspd          826 non-null    float64       \n",
+            " 6   pres          826 non-null    float64       \n",
+            " 7   prcp          826 non-null    float64       \n",
+            " 8   RainToday     826 non-null    int64         \n",
+            " 9   prcp_prev     826 non-null    float64       \n",
+            " 10  pres_prev     826 non-null    float64       \n",
+            " 11  RainTomorrow  826 non-null    int64         \n",
+            "dtypes: datetime64[ns](1), float64(9), int64(2)\n",
+            "memory usage: 83.9 KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Logistic Regression"
+      ],
+      "metadata": {
+        "id": "qWXEjEJ_0k0H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WqKhMT1Ose1I"
+        "id": "kVSIVN794AME"
       },
       "execution_count": null,
       "outputs": []
