Fixed the error where I ended up training the model with RandomizedSearch instead of Grid Search.

--- a/optimizedrainpred.ipynb
+++ b/optimizedrainpred.ipynb
@@ -12,7 +12,7 @@
         "-Ityxho9nNqY",
         "kcKDvIcHre3G"
       ],
-      "authorship_tag": "ABX9TyNBXrRX+xxzQPl2MNgO712J",
+      "authorship_tag": "ABX9TyPl9SDQYnoAQ8sxixEsx6v6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2837,10 +2837,10 @@
         "    n_jobs=-1\n",
         ")\n",
         "\n",
-        "random_search.fit(x_train_scaled,y_train)\n",
-        "best_model=random_search.best_estimator_  #finds out the best model\n",
+        "grid_search.fit(x_train_scaled,y_train)\n",
+        "best_model=grid_search.best_estimator_  #finds out the best model\n",
         "y_pred=best_model.predict(x_test_scaled)\n",
-        "print(\"Best Parameters:\",random_search.best_params_)  #showcases best parameters\n",
+        "print(\"Best Parameters:\",grid_search.best_params_)  #showcases best parameters\n",
         "print(classification_report(y_test,y_pred))"
       ],
       "metadata": {
@@ -2848,24 +2848,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "635514c8-5a8c-42e8-ca7c-1f9bb9c3cb69"
+        "outputId": "10d6153f-a5e6-4335-d27f-277b4994d7fe"
       },
-      "execution_count": 164,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
-            "Best Parameters: {'subsample': 0.8, 'n_estimators': 300, 'max_depth': 3, 'learning_rate': 0.01}\n",
+            "Fitting 5 folds for each of 450 candidates, totalling 2250 fits\n",
+            "Best Parameters: {'learning_rate': 0.01, 'max_depth': 4, 'n_estimators': 500, 'subsample': 0.8}\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.79      0.68      0.73        76\n",
-            "           1       0.87      0.92      0.89       174\n",
+            "           0       0.81      0.68      0.74        76\n",
+            "           1       0.87      0.93      0.90       174\n",
             "\n",
-            "    accuracy                           0.85       250\n",
-            "   macro avg       0.83      0.80      0.81       250\n",
-            "weighted avg       0.84      0.85      0.84       250\n",
+            "    accuracy                           0.86       250\n",
+            "   macro avg       0.84      0.81      0.82       250\n",
+            "weighted avg       0.85      0.86      0.85       250\n",
             "\n"
           ]
         }
